# word-web-daily-service

./: README.md  pyproject.toml  requirements.txt  setup.cfg  test.sh  utilities.py  words.txt
src/: index.py  utilities.py
src/utilities/: constructor.py  custom_types.py  helpers.py  parser.py  sandbox.py  types.py  utilities.py  wordmgmt.py
tests/: test_constructor.py  test_index.py
tests/helpers/: test_calculate_points.py  test_filter_for_center.py  test_filter_list_by_length.py  test_get_anagrams.py  test_get_center.py  test_get_isograms.py  test_get_unique_letters.py
tests/wordmgmt/: test_fetch_file.py  test_get_random_isogram.py  test_remove_invalid_word.py  test_return_validated_array.py  test_validate_word.py
